# dwipe

./: Cargo.toml  Dockerfile  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-image-push.yml  publish.yml  release.yml  rust.yml
src/: README.md  main.rs
src/task_manager/: mod.rs
src/ui/: constants.rs
tests/: cursor.rs  delete.rs  file_tree.rs  handle_enter.rs  loading.rs
tests/common/: mod.rs
