[package]
name = "dwipe"
version = "0.1.4"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
license = "MIT"
edition = "2021"
description = "Fast, cross-platform disk cleanup tool with interactive UI"
homepage = "https://trinhminhtriet.com"
repository = "https://github.com/trinhminhtriet/dwipe"
readme = "README.md"
keywords = ["disk", "cleanup", "storage", "interactive", "tui"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
crossbeam = "0.8.4"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
jwalk = "0.8.1"
num_cpus = "1.17.0"
open = "5.3.2"
opener = { version = "0.8.2", default-features = false }
ratatui = "0.29.0"
trash = "5.2.2"
